# esp32SkelApp

./: .gitignore  CMakeLists.txt  README.md  fat.csv  ota+fat.csv  ota.csv  partitions.csv  publish-firmware-update.sh  sdkconfig  sdkconfig.esp32c3  sdkconfig.esp32c3-zero  sdkconfig.esp32c3-zero.basic  sdkconfig.esp32c3-zero.fat  sdkconfig.esp32c3-zero.ota+fat  sdkconfig.esp32c3.basic  sdkconfig.esp32c3.fat  sdkconfig.esp32c3.ota+fat  sdkconfig.esp32s3  sdkconfig.esp32s3-zero  sdkconfig.esp32s3-zero.basic  sdkconfig.esp32s3-zero.fat  sdkconfig.esp32s3-zero.ota+fat  sdkconfig.esp32s3.basic  sdkconfig.esp32s3.fat  sdkconfig.esp32s3.ota+fat
components/esp_https_ota/src/: esp_https_ota.c
firmware_update_server/: create-certs.sh  start-web-server.sh
main/: CMakeLists.txt  Kconfig.projbuild  app.c  app.h  ble.c  ble.h  esp32.h  fgc.h  https.c  https.h  idf_component.yml  led.c  led.h  main.c  mlog.c  mlog.h  nvram.c  nvram.h  ota.c  ota.h  timeval.c  timeval.h  wifi.c  wifi.h
server_certs/: ota_cert.pem
